[package]
name = "blockchain_rust_part_3"
authors = ["Justin <goodmood_lm@126.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Justin02180218"
repository = "https://github.com/Justin02180218"
keywords = ["blockchain", "rust", "exercise"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
rust-crypto = "0.2.36"
chrono = "0.4.19"
bigint = "4.4.3"
sled = "0.34"
